--- a/template.yaml
+++ b/template.yaml
@@ -1,12 +1,16 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: quarkus-s2i-template
-  title: Quarkus S2I App Template
-  description: Quarkus アプリを S2I でビルド＆OpenShiftにデプロイ、Tekton PipelineRun を作成＆待機
+  name: quarkus-tekton-gitops-template
+  title: Quarkus S2I + Tekton GitOps Template
+  description: GitHub push → Tekton PipelineRun 実行 → 完了待ち → Backstage登録
 spec:
   owner: user:default/nmushino
   type: service
+
+  ##########################################################
+  # Parameters
+  ##########################################################
 
   parameters:
     - title: アプリケーション情報
@@ -14,8 +18,6 @@ spec:
         - app_name
         - git_owner_name
         - git_repo_name
-        - cluster_name
-        - image_tag
       properties:
         app_name:
           type: string
@@ -23,12 +25,26 @@ spec:
           type: string
         git_repo_name:
           type: string
-        cluster_name:
-          type: string
-          enum: [a-cluster, b-cluster, c-cluster]
         image_tag:
           type: string
           default: latest
+
+    - title: Tekton 実行情報
+      required:
+        - tektonNamespace
+        - pipelineName
+      properties:
+        tektonNamespace:
+          type: string
+          default: quarkusdroneshop-cicd
+        pipelineName:
+          type: string
+        pvcName:
+          type: string
+          default: quarkusdroneshop-reward-shared-workspace-pvc
+        timeoutSeconds:
+          type: number
+          default: 900
 
     - title: 所有者情報
       required: [owner]
@@ -39,36 +55,15 @@ spec:
           ui:options:
             allowedKinds: [User]
 
-    - title: Tekton Pipeline情報
-      properties:
-        namespace:
-          type: string
-          description: Kubernetes namespace where the Tekton pipeline exists
-        pipelineName:
-          type: string
-          description: Tekton Pipeline to run
-        parameters:
-          type: object
-          description: Optional pipeline parameters
-        timeoutSeconds:
-          type: number
-          description: Timeout in seconds to wait for pipeline completion
-          default: 600
-
-    - title: PVC情報
-      properties:
-        namespace:
-          type: string
-          description: The namespace to create the PVC in
-          default: quarkusdroneshop-cicd
-        pvcnamespace:
-          type: string
-          default: quarkusdroneshop-reward-shared-workspace-pvc
-        pvcsize:
-          type: string
-          default: 5Gi
+  ##########################################################
+  # Steps
+  ##########################################################
 
   steps:
+
+    ##########################################################
+    # 1. ソース生成
+    ##########################################################
     - id: fetch
       name: テンプレート取得
       action: fetch:template
@@ -76,12 +71,12 @@ spec:
         url: ./skeleton
         values:
           app_name: ${{ parameters.app_name }}
-          git_owner_name: ${{ parameters.git_owner_name }}
-          git_repo_name: ${{ parameters.git_repo_name }}
-          cluster_name: ${{ parameters.cluster_name }}
           image_tag: ${{ parameters.image_tag }}
           owner: ${{ parameters.owner }}
 
+    ##########################################################
+    # 2. GitHubへPush
+    ##########################################################
     - id: publish
       name: GitHubへPush
       action: publish:github
@@ -90,56 +85,11 @@ spec:
         defaultBranch: main
         repoVisibility: public
 
-    # - id: create_pvc_yaml
-    #   name: Create PVC YAML
-    #   action: roadiehq:utils:fs:write
-    #   input:
-    #     path: ./output/pvc.yaml
-    #     content: |
-    #       apiVersion: v1
-    #       kind: PersistentVolumeClaim
-    #       metadata:
-    #         name: {{ parameters["PVC Name"] }}
-    #         namespace: {{ parameters.Namespace }}
-    #       spec:
-    #         accessModes:
-    #           - ReadWriteOnce
-    #         resources:
-    #           requests:
-    #             storage: {{ parameters["Storage Size"] }}
-
-    # - id: run_k8s
-    #   name: Apply PVC to cluster
-    #   action: custom:create-pvc
-    #   input:
-    #     namespace: {{ parameters.Namespace }}
-    #     pvcName: {{ parameters["PVC Name"] }}
-    #     storage: {{ parameters["Storage Size"] }}
-
-    - id: create-pipelinerun
-      name: Tekton PipelineRun YAML 作成
-      action: roadiehq:utils:fs:write
-      input:
-        path: pipelinerun-${{ parameters.app_name }}.yaml
-        content: |
-          apiVersion: tekton.dev/v1
-          kind: PipelineRun
-          metadata:
-            name: build-and-push-${{ parameters.app_name }}-{{ randomString(5) }}
-            namespace: ${{ parameters.namespace }}
-          spec:
-            pipelineRef:
-              name: ${{ parameters.pipelineName }}
-            workspaces:
-              - name: shared-workspace
-                persistentVolumeClaim:
-                  claimName: quarkusdroneshop-reward-shared-workspace-pvc
-            params:
-              - name: IMAGE_TAG
-                value: ${{ parameters.image_tag }}
-
+    ##########################################################
+    # 1. ArgoCD Application 作成
+    ##########################################################
     - id: deploy-argo
-      name: ArgoCD でデプロイ
+      name: ArgoCD Application 作成
       action: argocd:create-resources
       input:
         appName: quarkusdroneshop-reward-pipeline
@@ -148,17 +98,73 @@ spec:
         repoUrl: https://github.com/quarkusdroneshop/quarkusdroneshop-reward.git
         path: ${{ parameters.pipelineName }}
 
-    - id: register
-      name: Backstageに登録
-      action: catalog:register
+    ##########################################################
+    # 2. ArgoCD Sync 完了待ち
+    ##########################################################
+    - id: wait-argo
+      name: ArgoCD Sync 完了待ち
+      action: argocd:wait
       input:
-        repoContentsUrl: https://github.com/${{ parameters.git_owner_name }}/${{ parameters.git_repo_name }}/blob/main
-        catalogInfoPath: /catalog-info.yaml
+        appName: quarkusdroneshop-reward-pipeline
+        argoInstance: main
+        timeout: 600
+
+    ##########################################################
+    # 3. Tekton PipelineRun 実行
+    ##########################################################
+    - id: run-tekton
+      name: Tekton PipelineRun 実行
+      action: kubernetes:apply
+      input:
+        manifest: |
+          apiVersion: tekton.dev/v1
+          kind: PipelineRun
+          metadata:
+            name: build-${{ parameters.app_name }}
+            namespace: quarkusdroneshop-cicd
+          spec:
+            pipelineRef:
+              name: ${{ parameters.pipelineName }}
+            workspaces:
+              - name: shared-workspace
+                persistentVolumeClaim:
+                  claimName: quarkusdroneshop-reward-shared-workspace-pvc
+
+    ##########################################################
+    # 4. Tekton 完了待ち
+    ##########################################################
+    - id: wait-tekton
+      name: Tekton 完了待ち
+      action: kubernetes:wait
+      input:
+        apiVersion: tekton.dev/v1
+        kind: PipelineRun
+        name: build-${{ parameters.app_name }}
+        namespace: quarkusdroneshop-cicd
+        timeout: 900
+
+        ##########################################################
+        # 5. Backstage登録
+        ##########################################################
+        - id: register
+          name: Backstageに登録
+          action: catalog:register
+          input:
+            repoContentsUrl: https://github.com/${{ parameters.git_owner_name }}/${{ parameters.git_repo_name }}/blob/main
+            catalogInfoPath: /catalog-info.yaml
+
+  ##########################################################
+  # Output
+  ##########################################################
 
   output:
     links:
       - title: GitHub リポジトリ
         url: ${{ steps['publish'].output.remoteUrl }}
+
+      - title: OpenShift PipelineRun
+        url: https://console-openshift-console.apps.<your-cluster-domain>/k8s/ns/${{ parameters.tektonNamespace }}/tekton.dev~v1~PipelineRun/build-${{ parameters.app_name }}
+
       - title: Backstage エンティティ
         icon: catalog
         entityRef: ${{ steps['register'].output.entityRef }}
