--- a/template.yaml
+++ b/template.yaml
@@ -91,7 +91,7 @@ spec:
         argoInstance: main
         namespace: ${{ parameters.tektonNamespace }}
         repoUrl: ${{ steps['publish'].output.remoteUrl }}
-        path: tekton
+        path: pipline
 
     ##########################################################
     # 4. Tekton Trigger 実行
