--- a/template.yaml
+++ b/template.yaml
@@ -64,7 +64,7 @@ spec:
         argoInstance: main
         namespace: ${{ parameters.tektonNamespace }}
         repoUrl: ${{ steps['publish'].output.remoteUrl }}
-        path: pipeline/quarkusdroneshop-reword/pipeline/deploy-pipeline.yaml
+        path: pipeline/quarkusdroneshop-reward
         
     - id: trigger-tekton
       name: Tekton PipelineRun 実行
