--- a/template.yaml
+++ b/template.yaml
@@ -63,23 +63,24 @@ spec:
         appName: ${{ parameters.app_name }}-pipeline
         argoInstance: main
         namespace: openshift-gitops   # ← ここを固定する
+        project: default
         repoUrl: ${{ steps['publish'].output.remoteUrl }}
         path: pipeline/quarkusdroneshop-reward
         destinationServer: https://kubernetes.default.svc
         destinationNamespace: ${{ parameters.tektonNamespace }}
         
-    - id: trigger-tekton
-      name: Tekton PipelineRun 実行
-      action: http:backstage:request
-      input:
-        method: POST
-        path: /api/proxy/tekton-trigger  # Proxy 経由で正しい Route に届く
-        headers:
-          Content-Type: application/json
-          # Authorization は app-config.yaml で Proxy 経由なら不要
-        body:
-          repoUrl: https://github.com/${{ parameters.git_owner_name }}/${{ parameters.git_repo_name }}
-          imageTag: ${{ parameters.image_tag }}
+    # - id: trigger-tekton
+    #   name: Tekton PipelineRun 実行
+    #   action: http:backstage:request
+    #   input:
+    #     method: POST
+    #     path: /api/proxy/tekton-trigger  # Proxy 経由で正しい Route に届く
+    #     headers:
+    #       Content-Type: application/json
+    #       # Authorization は app-config.yaml で Proxy 経由なら不要
+    #     body:
+    #       repoUrl: https://github.com/${{ parameters.git_owner_name }}/${{ parameters.git_repo_name }}
+    #       imageTag: ${{ parameters.image_tag }}
 
   output:
     links:
