--- a/skeleton/pipeline/quarkusdroneshop-reward/resources/droneshop-configmap.yaml
+++ b/skeleton/pipeline/quarkusdroneshop-reward/resources/droneshop-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: droneshop-config
-  namespace: quarkusdroneshop-demo
+  namespace: quarkusdroneshop-cicd
 data:
   KAFKA_BOOTSTRAP_URLS: "shop-cluster-kafka-bootstrap:9092"
   STREAM_URL: "http://localhost:8080/dashboard/stream"
