--- a/template.yaml
+++ b/template.yaml
@@ -66,29 +66,32 @@ spec:
         repoUrl: ${{ steps['publish'].output.remoteUrl }}
         path: pipeline/quarkusdroneshop-reward
         
-    - id: trigger-tekton
-      name: Tekton PipelineRun 実行
-      action: http:backstage:request
+    - id: run-pipeline
+      name: PipelineRun 作成
+      action: kubernetes:apply
       input:
-        method: POST
-        url: https://reward-listener-quarkusdroneshop-cicd.apps.${{ parameters.clusterDomain }}
-        headers:
-          Content-Type: application/json
-        body:
-          imageTag: ${{ parameters.image_tag }}
+        manifest: |
+          apiVersion: tekton.dev/v1
+          kind: PipelineRun
+          metadata:
+            generateName: reward-run-
+            namespace: quarkusdroneshop-cicd
+          spec:
+            pipelineRef:
+              name: build-and-push-quarkusdroneshop-reward
+            params:
+              - name: IMAGE_TAG
+                value: ${{ parameters.image_tag }}
+            workspaces:
+              - name: shared-workspace
+                persistentVolumeClaim:
+                  claimName: quarkusdroneshop-reward-shared-workspace-pvc
 
-    # - id: trigger-tekton
-    #   name: Tekton PipelineRun 実行
-    #   action: http:backstage:request
-    #   input:
-    #     method: POST
-    #     path: /api/proxy/tekton-trigger  # Proxy 経由で正しい Route に届く
-    #     headers:
-    #       Content-Type: application/json
-    #       # Authorization は app-config.yaml で Proxy 経由なら不要
-    #     body:
-    #       repoUrl: https://github.com/${{ parameters.git_owner_name }}/${{ parameters.git_repo_name }}
-    #       imageTag: ${{ parameters.image_tag }}
+    - id: register
+      action: catalog:register
+      input:
+        repoContentsUrl: ${{ steps.publish.output.repoContentsUrl }}
+        catalogInfoPath: /catalog-info.yaml
 
   output:
     links:
