--- a/template.yaml
+++ b/template.yaml
@@ -68,20 +68,17 @@ spec:
         
     - id: run-pipeline
       name: PipelineRun 作成
-      action: kubernetes:apply
+      action: kubernetes:create
       input:
+        namespace: quarkusdroneshop-cicd
         manifest: |
           apiVersion: tekton.dev/v1
           kind: PipelineRun
           metadata:
             generateName: reward-run-
-            namespace: quarkusdroneshop-cicd
           spec:
             pipelineRef:
               name: build-and-push-quarkusdroneshop-reward
-            params:
-              - name: IMAGE_TAG
-                value: ${{ parameters.image_tag }}
             workspaces:
               - name: shared-workspace
                 persistentVolumeClaim:
